# tire-slip-simulator

./: README.md  setup.cfg
examples/: linear_tireslip.py  linear_tracking.py  linear_velocities_gen.py  poly_velocities_gen.py
simulator/: generator.py  model.py  model_tracking_1D.py  utils.py  viz.py
