[metadata]
name = Tire-slip-simulator
version = 0.1
author = Colin Parellier
home-page = https://github.com/Colin75/tire-slip-generator
description =
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = Magic Formula, Tire slip, dataset

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4